--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@ header nav .right{
 
 header nav .right p{
     font-family: "Josefin Sans", sans-serif;
-    font-size: 18px;
+    font-size: 22px;
     cursor: pointer;
 }
 
 header nav .right p span{
     font-size: 20px;
+    
 }
 
 .home{
@@ -114,14 +115,15 @@ header nav .right p span{
     margin: 5px 10px;
     position: relative;
     top: 40px;
+    bottom: 20px;
 }
 
-.about p {
+.about p, .bedroom p {
     font-size: 32px;
     font-weight: 400;
     padding: 5px 10px;
     position: relative;
-    top: 40px;
+    top: 60px;
     left: 20px;
     
 
@@ -147,3 +149,269 @@ header nav .right p span{
     border-radius: 7px;
     margin: 60px 0px;
 }
+
+.bedroom {
+    margin: 10px 20px;
+}
+
+.bedroom .container{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 100px;
+} 
+
+.bedroom .container .right{
+    flex-direction: column;
+}
+
+.bedroom  .container .image{
+    padding: 15px;
+    margin: 2px;
+    position: relative;
+}
+
+/* .bedroom  .container .image span{
+    position: absolute;
+    top: 0;
+    left: 0;
+} */
+
+.bedroom  .container .image img {
+    max-width: 400px;
+    height: 300px;
+    object-fit: cover; 
+}
+
+.bedroom  .container .middle .image {
+    position: relative;
+    top: 0px;
+} 
+
+.bedroom .image {
+    position: relative;
+    margin: 20px;
+    flex-basis: calc(50% - 20px); /* Set card width for two columns */
+}
+
+.bedroom .image img {
+    width: 100%;
+}
+
+.bedroom  .container .image span {
+    background: #000;
+    color: white;
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    font-size: 15px;
+    font-family: Verdana, sans-serif;
+    padding: 8px 16px;
+}
+
+
+
+/* styles.css */
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    margin-top: 90px;
+    font-family: "Open Sans", sans-serif;
+  }
+  
+  .footer .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    
+  }
+
+  .footer .container .row{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer .container .row div{
+    width: 40%;
+    padding: 0 10px;
+  }
+  
+  .footer h5 {
+    font-weight: bold;
+    margin-top: 0;
+    font-size: 18px;
+  }
+  
+  .social-links {
+    margin-top: 20px;
+  }
+  
+  .social-links li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .social-links li a {
+    color: #fff;
+    transition: color 0.2s ease;
+  }
+  
+  .social-links li a:hover {
+    color: #ccc;
+  }
+  
+  .footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer ul li {
+    margin-bottom: 10px;
+  }
+  
+  .footer ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.2s ease;
+  }
+  
+  .footer ul li a:hover {
+    color: #ccc;
+  }
+  
+  .copyright {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #666;
+  }
+  
+  .copyright a {
+    color: #666;
+    text-decoration: none;
+  }
+  
+  .copyright a:hover {
+    color: #ccc;
+  }
+
+  /* Add a class to toggle dark mode */
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  /* Style the footer specifically for dark mode */
+  .dark-mode .footer {
+    background-color: #444;
+    /* color: #fff; */
+  }
+
+  #dark-mode-toggle{
+    border: none;
+    background-color: inherit;
+    color: white  ;
+  }
+
+  #dark-mode-toggle:hover{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  /* Mobile devices (portrait and landscape) */
+@media only screen and (max-width: 480px) {
+  /* Styles for mobile devices */
+  header {
+    padding: 10px;
+  }
+  header nav {
+    flex-direction: column;
+  }
+  header nav .middle ul li {
+    display: block;
+  }
+  .home .backimage img {
+    height: 50%;
+    width: 100%;
+  }
+  .about {
+    margin-top: 50px;
+  }
+  .about p, .bedroom p {
+    font-size: 20px;
+  }
+  .bedroom .container {
+    flex-direction: column;
+  }
+  .bedroom .container .image {
+    margin: 10px;
+  }
+  .footer {
+    padding: 10px 0;
+  }
+  .footer .container {
+    max-width: 90%;
+  }
+}
+
+/* Tablets (portrait and landscape) */
+@media only screen and (min-width: 281px) and (max-width: 778px) {
+  /* Styles for tablets */
+  header {
+    padding: 15px;
+  }
+
+  header nav{
+    justify-content: space-around;
+  }
+
+  header nav .middle ul li{
+    display: none;
+  }
+
+  .about .container {
+    display: inline-block;
+    width: 60%;
+    margin: 0 40px;
+    align-items: center;
+
+  }
+
+  
+
+  .home .backimage img {
+    height: 60%;
+    width: 100%;
+  }
+  .about {
+    margin-top: 70px;
+  }
+  .about p, .bedroom p {
+    font-size: 24px;
+  }
+  .bedroom .container {
+    display: inline;
+    position: relative;
+    left: 30px;
+  }
+  .bedroom .container .image {
+    margin: 20px;
+  }
+  .footer {
+    padding: 15px 20px;
+    position: absolute;
+    right: -50px;
+  }
+  .footer .container {
+    width: 100vh;
+  }
+
+  .footer .container .word{
+    display: none;
+  }
+
+
+}
+
+
